# IGames

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  OpeniGameNoticeToUsers.md  README.md  main.cpp
Qt/: CMakeLists.txt  cpp.hint
Qt/Resources/: iGameQtMainWindow.qrc
Qt/Resources/Icons/: desktop.ini
Qt/Resources/Shaders/: direct_vector.frag  direct_vector.geom  direct_vector.vert
Qt/Resources/UI/: Animation.ui  ColorManager.ui  MeshEditMode.ui  QualityDetection.ui  ScalarView.ui  SearchInfo.ui  SetCustomScaleRange.ui  TensorView.ui  filterDialog.ui  iGameQtMainWindow.ui  igStreamTracer.ui  igVector.ui  layerDialog.ui
Qt/include/IQComponents/: igQtAnimationTreeWidget.h  igQtAnimationTreeWidget_interpolate.h  igQtAnimationTreeWidget_snap.h  igQtDataRangeSlider.h  igQtFilterDialogDockWidget.h  igQtModelDialogWidget.h  igQtModelListView.h  igQtModelTreeWidget.h  igQtOptionDialog.h  igQtPrintInfo.h  igQtProgressBarWidget.h  igQtPropertyTreeWidget.h
Qt/include/IQCore/: iGameFileDialog.h  igQtAnimationVcrController.h  igQtExportModule.h  igQtFileLoader.h  igQtFramelessWidget.h  igQtGlobalVariable.h  igQtMainWindow.h  igQtOpenGLWidgetManager.h
Qt/include/IQWidgets/: igQtAnimationWidget.h  igQtColorBarWidget.h  igQtEditModeWidget.h  igQtModelDrawWidget.h  igQtModelInforMationWidget.h  igQtQualityDetectionWidget.h  igQtRenderWidget.h  igQtScalarViewWidget.h  igQtSearchInfoWidget.h  igQtStreamTracerWidget.h  igQtTensorWidget.h  igQtVectorWidget.h
Qt/src/IQComponents/: igQtAnimationTreeWidget.cpp  igQtAnimationTreeWidget_interpolate.cpp  igQtAnimationTreeWidget_snap.cpp  igQtDataRangeSlider.cpp  igQtFilterDialogDockWidget.cpp  igQtModelDialogWidget.cpp  igQtModelListView.cpp  igQtModelTreeWidget.cpp  igQtOptionDialog.cpp  igQtPrintInfo.cpp  igQtProgressBarWidget.cpp  igQtPropertyTreeWidget.cpp
Qt/src/IQCore/: iGameFileDialog.cpp  igQtAnimationVcrController.cpp  igQtFileLoader.cpp  igQtFramelessWidget.cpp  igQtMainWindow.cpp  igQtOpenGLWidgetManager.cpp
Qt/src/IQWidgets/: igQtAnimationWidget.cpp  igQtColorBarWidget.cpp  igQtEditModeWidget.cpp  igQtModelDrawWidget.cpp  igQtModelInformationWidget.cpp  igQtQualityDectionWidget.cpp  igQtRenderWidget.cpp  igQtScalarViewWidget.cpp  igQtSearchInfoWidget.cpp  igQtStreamTracerWidget.cpp  igQtTensorWidget.cpp  igQtVectorWidget.cpp
iGameCore/: CMakeLists.txt
iGameCore/Core/CellModel/: iGameCell.h  iGameCellType.h  iGameEmptyCell.h  iGameFace.h  iGameHexahedron.h  iGameLine.h  iGamePolyLine.h  iGamePolygon.h  iGamePolyhedron.h  iGamePrism.h  iGamePyramid.h  iGameQuad.h  iGameTetra.h  iGameTriangle.h  iGameVertex.h  iGameVolume.h
iGameCore/Core/Common/: iGameAbi.h  iGameAbstractObject.h  iGameArrayObject.h  iGameAttribute.cpp  iGameAttribute.h  iGameAttributeSet.cpp  iGameAttributeSet.h  iGameBase64Util.h  iGameBoundingBox.h  iGameByteSwap.cpp  iGameByteSwap.h  iGameCellArray.cpp  iGameCellArray.h  iGameCellLinks.cpp  iGameCellLinks.h  iGameColorMap.cpp  iGameColorMap.h  iGameCommand.cpp  iGameCommand.h  iGameEdgeTable.h  iGameElementArray.h  iGameFaceTable.h  iGameFileUtils.h  iGameFilter.cpp  iGameFilter.h  iGameFlatArray.h  iGameFlexArray.h  iGameHashMap.h  iGameIdArray.h  iGameMacro.h  iGameMarker.h  iGameMetadata.cpp  iGameMetadata.h  iGameObject.cpp  iGameObject.h  iGameOctree.h  iGamePicker.h  iGamePointFinder.h  iGamePointPicker.h  iGamePoints.cpp  (+18 more)
iGameCore/Core/DataModel/: AABB_Tree.h  MPoint3.h  MVector3.h  PolyMesh.h  PolyMesh_Base.h  iGameCompositeDataObject.cpp  iGameCompositeDataObject.h  iGameDataCollection.h  iGameDataObject.cpp  iGameDataObject.h  iGameDataSource.h  iGameDrawObject.cpp  iGameDrawObject.h  iGamePointSet.cpp  iGamePointSet.h  iGameStructuredMesh.cpp  iGameStructuredMesh.h  iGameSurfaceMesh.cpp  iGameSurfaceMesh.h  iGameUnstructuredMesh.cpp  iGameUnstructuredMesh.h  iGameVolumeMesh.cpp  iGameVolumeMesh.h  unistd.h
iGameCore/Filters/: iGameARAPTest.h  iGameFilterIncludes.h  iGameFilterPoints.h  iGameSurfaceMeshFilterTest.h  iGameVolumeMeshFilterTest.h
iGameCore/Filters/Sources/: iGameLineTypePointsSource.cpp  iGameLineTypePointsSource.h  iGamePointsSource.h
iGameCore/Filters/StreamView/: iGameStreamBase.cpp  iGameStreamBase.h
iGameCore/Filters/TensorViewFilter/: iGameTensorRepresentation.cpp  iGameTensorRepresentation.h  iGameTensorWidgetBase.cpp  iGameTensorWidgetBase.h
iGameCore/Filters/TestFilter/: iGameTestFilter.h
iGameCore/Filters/VectorView/: iGameVectorBase.cpp  iGameVectorBase.h
iGameCore/Filters/VolumeMeshAlgorithm/: iGameTetraDecimation.h  iGameVolumeMeshClipper.cpp  iGameVolumeMeshClipper.h
iGameCore/Filters/iGameARAP/: iGameArap.cpp  iGameArap.h
iGameCore/Filters/iGameARAPInterpolation/: iGameArapInterpolation.cpp  iGameArapInterpolation.h
iGameCore/Filters/iGameBilateralNormalFiletr/: iGameBilateral.cpp  iGameBilateral.h
iGameCore/Filters/iGameCrossField/: iGameCrossField.cpp  iGameCrossField.h
iGameCore/Filters/iGameCurvature/: iGameCurvature.cpp  iGameCurvature.h
iGameCore/Filters/iGameCvtLioyd/: ImageSampler.cpp  ImageSampler.h  iGameCvtLloyd.cpp  iGameCvtLloyd.h
iGameCore/Filters/iGameDeNoise/: iGameDeNoise.cpp  iGameDeNoise.h
iGameCore/Filters/iGameDelaunay/: iGameDelaunay.cpp  iGameDelaunay.h
iGameCore/Filters/iGameMeanValue/: iGameMeanValue..cpp  iGameMeanValue.h
iGameCore/Filters/iGameMinPath/: iGameMinPath.cpp  iGameMinPath.h
iGameCore/Filters/iGameMinSurface/: iGameminimal_surface.cpp  iGameminimal_surface.h
iGameCore/Filters/iGameModelSurfaceFilters/: iGameModelGeometryFilter.cpp  iGameModelGeometryFilter.h
iGameCore/Filters/iGameQEM/: iGameQEM.cpp  iGameQEM.h
iGameCore/Filters/iGameRemesh/: iGameRemesh.cpp  iGameRemesh.h
iGameCore/Filters/iGameSubdivision/: iGameHexhedronSubdivision.cpp  iGameHexhedronSubdivision.h  iGameQuadSubdivision.cpp  iGameQuadSubdivision.h
iGameCore/Filters/iGameSufaceSimply/: Surface_Simplification.cpp  Surface_Simplification.h
iGameCore/IO/: iGameFileIO.cpp  iGameFileIO.h  iGameFileReader.cpp  iGameFileReader.h  iGameFileWriter.cpp  iGameFileWriter.h  iGameXMLFileReader.cpp  iGameXMLFileReader.h
(+209 files in other folders)
